--- a/intRo6 continuous.Rmd
+++ b/intRo6 continuous.Rmd
@@ -31,20 +31,7 @@ Let's load the Ambition dataset. This contains some simulated result of the AMBI
 
 LAmB is nephrotoxic, so we're interested in the renal function in these two groups.
 ```{r}
-amb <- readxl::read_xlsx("not yet published/ambition.xlsx")
-amb %<>% mutate(
-  sex = as.factor(sex),
-  country = as.factor(country),
-  arm = as.factor(arm),
-  mortality_10w = as.factor(mortality_10w),
-  AE_3_4 = as.factor(AE_3_4),
-  IRIS_10w = as.factor(IRIS_10w),
-  disability_10w = as.factor(disability_10w)
-)
-glimpse(amb)
-summary(amb)
-
-save(amb, file = "ambition.RData") # error with this
+load("data/ambition.RData")
 ```
 
 Just to familiarise yourself with the dataset:
@@ -72,7 +59,7 @@ To have a first idea we can summarise the creatinine outcome in the two treatmen
 amb %>% group_by(arm) %>% summarise("number of patients"= n(),
                                     "mean creatinine at 2w" = mean(crea_2w))
 ```
-The average creatinine at 2 weeks is 113 mmol/L in the control group, and 87 mmol/L  in the single-dose group. In this sample, there's a difference of 26 mmol/L. How do we know if this reflects a true difference in the whole population, and is not due to chance?
+The average creatinine at 2 weeks is 110 mmol/L in the control group, and 98 mmol/L  in the single-dose group. In this sample, there's a difference of 12 mmol/L. How do we know if this reflects a true difference in the whole population, and is not due to chance?
 
 -------------------------------------------------------------------------------
 
@@ -87,23 +74,10 @@ We have a categorical exposure variable (treatment arm) and a continuous outcome
 - scatter plot
 - violin plot
 
-*Exercise*
+*Exercise 1*
 Use an appropriate graph to visualise the distribution of creatinine at 2 weeks according to treatment arm.
 ```{r}
-# Option A: Box plot
-ggplot(amb, aes(y = crea_2w, x = arm)) +
-  geom_boxplot() +
-  coord_fixed(ratio = 0.02)
 
-# Option B: violin plot
-ggplot(amb, aes(y = crea_2w, x = arm)) +
-  geom_violin(draw_quantiles = 0.5) +
-  coord_fixed(ratio = 0.02)
-
-# Option C: stratified histogram
-ggplot(amb, aes(x = crea_2w, fill = arm)) +
-  geom_histogram(binwidth = 12.5) +
-  facet_grid(rows = vars(arm))
 ```
 
 From your data visualisation, you can see that there is quite a lot of overlap between creatinine values in both groups, however a large portion of the interquartile ranges don't overlap.
@@ -128,7 +102,7 @@ amb %>% group_by(arm) %>% summarise(
 ```
 
 An intuitive interpretation of the second confidence interval is:
-"We can be 95% confident that the mean true population mean of creatinine at 2 weeks among patients treated with a single LAmB dose lies between 84 and 90".
+"We can be 95% confident that the mean true population mean of creatinine at 2 weeks among patients treated with a single LAmB dose lies between 96 and 101".
 
 As you can see, with a continuous outcome even relatively small sample sizes give us very precise statistical estimates.
 
@@ -151,23 +125,23 @@ amb %$% t.test(crea_2w ~ arm)
 
 The key output here is the p-value, <0.001. This means that there is very strong evidence against the null hypothesis, and so very strong evidence that creatinine at 2 weeks is indeed different according to treatment group.
 
-The other important output is the 95% CI of this difference: (22, 31). We can be 95% confident that the true difference in creatinine average is between 22 and 31 mmol/L.
+The other important output is the 95% CI of this difference: (8.3, 15.0). We can be 95% confident that the true difference in creatinine average is between 8.3 and 15.0 mmol/L.
 
-*Exercise*
+*Exercise 2*
 Now try assessing with a t-test whether *baseline* creatinine is linked to treatment group.
 
 ```{r}
-amb %$% t.test(crea_0 ~ arm)
+
 ```
 How do you interpret these results?
 
 
-*Challenge exercise*
+*Challenge exercise 3*
 Assess whether baseline eGFR is different in people from Uganda compared to people from Malawi.
+
+Hint: the "country" variable contains more than 2 countries. How do restrict the dataset only to people from Uganda and Malawi?
 ```{r}
-amb %>%
-  filter(country == "uganda" | country == "malawi") %$%
-  t.test(egfr_0 ~ country)
+
 ```
 
 (What about if you have more than 2 groups in your exposure variable? You can't use a t test, you need to use ANOVA.)
@@ -180,7 +154,7 @@ Now let's go through another research question: "Is creatinine at baseline relat
 
 Both variables are continuous now, so we can't calculate mean creatinine according to age unless we categorised the age group. What we can do is plotting this.
 
-*Exercise*
+*Exercise 4*
 What's the best way to plot two continuous variables against each other?
 - bar chart
 - Box plot
@@ -191,7 +165,7 @@ What's the best way to plot two continuous variables against each other?
 Plot creatinine at baseline against age. Do you think there's a relationship?
 
 ```{r}
-amb %>% ggplot(aes(x = age, y = crea_0)) + geom_point()
+
 ```
 
 -------------------------------------------------------------------------------
@@ -205,7 +179,7 @@ What's great about linear regression is that we can visually represent it. In {g
 ```{r}
 amb %>% ggplot(aes(x = age, y = crea_0)) +
   geom_point() +
-  geom_smooth(method = "lm") # lm stands for linear
+  geom_smooth(method = "lm") # lm stands for linear model
 ```
 
 What do you think of this regression line? Is there a relationship between creatinine and age?
@@ -222,27 +196,100 @@ lm(crea_0 ~ age,
 ```
 
 We're interested in these key outputs:
-- The intercept estimate (In this case, 68 mmol/L)
-- the age coefficient estimate (In this case, +0.04)
+- The intercept estimate (In this case, 55 mmol/L)
+- the age coefficient estimate (In this case, 0.53)
 - The p-value for the age estimate - visualised as Pr(>|t|) - in this case, <0.001.
 
 From the intercept and the coefficient, we can write a regression equation:
 
-creatinine = -0.04 * age + 68
+creatinine = 0.53 * age + 55
 
-This means that for every year of life, creatinine increases by 0.04 mmol/L.
+This means that for every year of life, creatinine increases by 0.53 mmol/L.
 
-How confident are we about this statement? Not confident at all: the p value is 0.46. We can say that there is no evidence against the null hypothesis.
+How confident are we about this statement? Very confident: the p value is <0.001. We can say that there is very strong evidence against the null hypothesis.
 
-(The intercept, 68, mathematically refers to the mean creatinine at age 0 years. But in this dataset the youngest person is 18, so that value is purely extrapolated by continuing the regression line to the left. It does not have any clinical meaning.)
+(The intercept, 55, mathematically refers to the mean creatinine at age 0 years. But in this dataset the youngest person is 18, so that value is purely extrapolated by continuing the regression line to the left. It does not have any clinical meaning.)
 
-*Exercise*
+*Exercise 5*
 Now assess the relation between eGFR at baseline and age:
 1. Draw a scatterplot with a linear regression line. What do you think of the distribution?
 2. Conduct hypothesis testing with a linear regression model.
 3. Write the regression equation. What does this mean?
 4. How confident are you that this results reflects the true population values?
 ```{r}
+# 1: scatterplot
+
+
+# 2: linear model
+
+
+# 3: regression equation
+
+
+# 4: interpretation
+
+
+```
+
+-------------------------------------------------------------------------------
+
+*Challenge exercise 6*
+Creatinine at 2 weeks is not very meaningful - in real life you'd compare that value with the baseline creatinine, and this is what the trial is looking at.
+1. Create a new variable that represents the percent change in creatinine.
+2. Visualise the distribution of this change in the two treatment arms.
+3. Use an appropriate statistical test to assess whether there's a relation between change in creatinine and treatment arm.
+```{r}
+# 1
+
+
+# 2
+
+
+# 3
+
+
+```
+
+
+
+
+---
+
+Solutions
+
+```{r Exercise 1}
+# Option A: Box plot
+ggplot(amb, aes(y = crea_2w, x = arm)) +
+  geom_boxplot() +
+  coord_fixed(ratio = 0.02)
+
+# Option B: violin plot
+ggplot(amb, aes(y = crea_2w, x = arm)) +
+  geom_violin(draw_quantiles = 0.5) +
+  coord_fixed(ratio = 0.02)
+
+# Option C: stratified histogram
+ggplot(amb, aes(x = crea_2w, fill = arm)) +
+  geom_histogram(binwidth = 12.5) +
+  facet_grid(rows = vars(arm))
+```
+
+
+```{r Exercise 2}
+amb %$% t.test(crea_0 ~ arm)
+```
+
+```{r Challenge exercise 3}
+amb %>%
+  filter(country == "uganda" | country == "malawi") %$%
+  t.test(egfr_0 ~ country)
+```
+
+```{r Exercise 4}
+amb %>% ggplot(aes(x = age, y = crea_0)) + geom_point()
+```
+
+```{r Exercise 5}
 # 1: scatterplot
 amb %>% ggplot(aes(x = age, y = egfr_0)) +
   geom_point(colour = "darkgreen") +
@@ -254,20 +301,13 @@ lm(egfr_0 ~ age,
   summary()
 
 # 3: regression equation
-# eGFR = -0.65 * age + 110
+# eGFR = -1.34 * age + 129
 
 # 4: interpretation
 # p-value < 0.001. There's very strong evidence that eGFR decreases with age.
 ```
 
--------------------------------------------------------------------------------
-
-*Challenge exercise*
-Creatinine at 2 weeks is not very meaningful - in real life you'd compare that value with the baseline creatinine, and this is what the trial is looking at.
-1. Create a new variable that represents the percent change in creatinine.
-2. Visualise the distribution of this change in the two treatment arms.
-3. Use an appropriate statistical test to assess whether there's a relation between change in creatinine and treatment arm.
-```{r}
+```{r Challenge exercise 6}
 # 1
 amb %<>% mutate(change_creat = 100*(crea_2w - crea_0)/crea_0)
 amb %>% select(ID, crea_0, crea_2w, change_creat)
@@ -278,19 +318,9 @@ amb %>% ggplot(aes(arm, change_creat)) + geom_boxplot()
 # 3, option A
 amb %$% t.test(change_creat ~ arm)
 
-# 3, oprion B
+# 3, option B
 lm(change_creat ~ arm,
    data = amb) %>% 
   summary()
 ```
-
-
-
-
-
-
-
-
-
-
 
